# robot-task-management

./: .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
scripts/: seed_db.py
src/robot_task_management/: __init__.py  flask_apps.py  util.py
src/robot_task_management/api/: __init__.py  robot_task_executions_management.py  robot_tasks_management.py  robots_management.py
src/robot_task_management/models/: __init__.py  base.py  robot_task_executions.py  robot_task_type.py  robot_tasks.py  robot_type.py  robots.py
src/robot_task_management/schemas/: robot_task_executions.py  robot_task_type.py  robot_tasks.py  robot_type.py  robots.py
tests/: conftest.py  factories.py  test_csv_export.py
tests/api/: test_robot_task_executions_management.py  test_robot_tasks_management.py  test_robots_management.py
